syntax = "proto3";

package proto;

option go_package = "./proto;proto";

import "Shared/proto/block.proto";

service Queries {
    rpc GetBlock(BlockRequest) returns (Block) {}

    rpc GetBlockContent(BlockRequest) returns (Block) {}
    rpc GetBlockMeta(BlockRequest) returns (BlockMetas) {}
    rpc GetBlockRules(BlockRequest) returns (BlockRules) {}

    rpc GetVersions(VersionsRequest) returns (VersionList) {}

    rpc GetLanguages(LanguageRequest) returns (LanguageList) {}
}

message BlockRequest {
    string id = 1;
    string lang = 2;
    optional int32 version = 2;
}

message VersionRequest {
    string id = 1;
    string language = 2;
}

message VersionRequest {
    string id = 1;
    string version = 2;
}

message Selectors {
    repeated string authors = 1;
    repeated string categories = 2;
    repeated string tags = 3;
    string type = 4;
}

message Pagination {
    int32 pageSize = 1;
    int32 pageNum = 2;
    int32 total = 3;
}

